Titulo 1 y Parrafo 1 Agregado

--- a/clase numero 4/index.html
+++ b/clase numero 4/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- para el primer commit-->
+    <h1>Ejemplo de git</h1>
+    <h2>Para primer commit</h2>
+    <p><span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia deleniti architecto, reprehenderit neque quae iure eveniet molestias distinctio alias, dicta officia voluptatibus animi quam perferendis eaque corporis repellat pariatur. Eveniet.</span><span>Dicta molestiae laborum alias tempore cupiditate blanditiis corporis dolores corrupti. Minima, maiores ratione dolorem eaque eius est soluta atque deleniti animi. Officiis fuga repellendus eius aspernatur. Ratione optio eos ducimus?</span><span>Consequatur dicta blanditiis aliquid ipsum. Saepe fugiat iusto earum odit vitae dolor quidem quasi repellendus. Repellat placeat aliquid suscipit, harum qui laboriosam, unde aliquam culpa eligendi blanditiis facilis ratione a.</span></p>
+    <hr>
 </body>
 </html>
