Titulo 2 y Parrafo 2 Agregados

--- a/clase numero 4/index.html
+++ b/clase numero 4/index.html
@@ -11,5 +11,9 @@
     <h2>Para primer commit</h2>
     <p><span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia deleniti architecto, reprehenderit neque quae iure eveniet molestias distinctio alias, dicta officia voluptatibus animi quam perferendis eaque corporis repellat pariatur. Eveniet.</span><span>Dicta molestiae laborum alias tempore cupiditate blanditiis corporis dolores corrupti. Minima, maiores ratione dolorem eaque eius est soluta atque deleniti animi. Officiis fuga repellendus eius aspernatur. Ratione optio eos ducimus?</span><span>Consequatur dicta blanditiis aliquid ipsum. Saepe fugiat iusto earum odit vitae dolor quidem quasi repellendus. Repellat placeat aliquid suscipit, harum qui laboriosam, unde aliquam culpa eligendi blanditiis facilis ratione a.</span></p>
     <hr>
+    <h2>Para segundo commit</h2>
+    <p><span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur ullam qui incidunt delectus totam optio saepe molestias. A obcaecati atque eius sit fuga illo, praesentium, doloremque, maiores assumenda aspernatur eaque!</span><span>Similique, at voluptatibus. Neque, reprehenderit sapiente eos quisquam, eaque expedita saepe adipisci repellendus mollitia sed maxime! Ut asperiores quasi nihil corporis sequi et cum explicabo, assumenda, libero labore voluptate beatae.</span><span>Odio eaque voluptatum doloribus impedit qui beatae iure ad libero perferendis quisquam, autem earum esse necessitatibus quam nobis? Aspernatur facere, impedit earum aperiam labore quas. Nihil quidem fugit soluta odio!</span></p>
+    <hr>
 </body>
+
 </html>
