formulario rama2 creado

--- a/clase numero 4/index.html
+++ b/clase numero 4/index.html
@@ -47,6 +47,7 @@
         soluta odio!</span
       >
     </p>
-    <hr />
+    <hr>
+    <a href="formularios.html">Ver formularios</a>
   </body>
 </html>
